k8s/backend.yml

# ======================================================
#  Service pour la base de données
# ======================================================
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  ports:
    - port: 5432
  selector:
    app: postgres

---

# ======================================================
#  Déploiement de la base de données PostgreSQL
# ======================================================
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
spec:
  replicas: 1
  serviceName: "postgres-db"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:11-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---

# ======================================================
#  Service pour le Backend (MODIFIÉ POUR MONITORING)
# ======================================================
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  # ### AJOUT POUR MONITORING : Label essentiel pour le ServiceMonitor ###
  labels:
    app: backend-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      # ### AJOUT POUR MONITORING : On nomme le port ###
      name: http-backend

---

# ======================================================
#  Déploiement de l'application Backend Spring Boot
# ======================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-app
          image: abidhamza/job-tracker-backend:v1
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
