k8s/frontend.yml
# --- Service pour le Frontend ---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer # Expose le service à l'extérieur via un load balancer
  # Pour un test en local (Minikube/Docker Desktop), utilisez : type: NodePort
  ports:
    - port: 80 # Port externe
      targetPort: 80 # Port du conteneur Nginx
      # nodePort: 30080 # Si vous utilisez NodePort
  selector:
    app: frontend

---
# --- Déploiement du Frontend ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-app
          image: abidhamza/job-tracker-frontend:v1 
          imagePullPolicy: Always
          ports:
            - containerPort: 80
